--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,13 @@
+cds_band:
+    resource: "@CdsBandBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+cds_group:
+    resource: "@CdsGroupBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 _welcome:
     pattern:  /
     defaults: { _controller: ClamzCdsSiteBundle:Accueil:accueil }
