--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,3 +82,5 @@ knp_menu:
         template: knp_menu.html.twig
     templating: false # if true, enables the helper for PHP templates
     default_renderer: twig # The renderer to use, list is also available by default
+    
+fos_js_routing:
