--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
         "friendsofsymfony/user-bundle": "*",
-        "knplabs/knp-menu-bundle":"dev-master"
+        "knplabs/knp-menu-bundle":"dev-master",
+        "friendsofsymfony/jsrouting-bundle":"dev-master"
     },
     "scripts": {
         "post-install-cmd": [
