--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle": "1.0.*",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.1.*",
-        "symfony/swiftmailer-bundle": "2.1.*",
+        "symfony/swiftmailer-bundle": "dev-master",
         "symfony/monolog-bundle": "2.1.*",
         "sensio/distribution-bundle": "2.1.*",
         "sensio/framework-extra-bundle": "2.1.*",
@@ -20,7 +20,10 @@
         "jms/di-extra-bundle": "1.1.*",
         "friendsofsymfony/user-bundle": "*",
         "knplabs/knp-menu-bundle":"dev-master",
-        "friendsofsymfony/jsrouting-bundle":"dev-master"
+        "friendsofsymfony/jsrouting-bundle":"dev-master",
+        "gedmo/doctrine-extensions": "dev-master",
+        "avalanche123/imagine-bundle": "v2.1"
+        
     },
     "scripts": {
         "post-install-cmd": [
