--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: doctrine_extensions.yml }
+    - { resource: imagine_extension.yml }
     - { resource: @ClamzCdsSiteBundle/Resources/config/formsServices.yml }
 
 framework:
